add test cases